fix icon-text alignment

--- a/assets/variables.sass
+++ b/assets/variables.sass
@@ -25,3 +25,9 @@ $body-font-family: "GrammatikaRegular", sans-serif !important
 
 .cursor-pointer
     cursor: pointer
+
+.v-icon.v-icon
+    vertical-align: sub !important
+
+.v-btn__content
+    display: inline !important
